feat: update inquiry module

--- a/src/assets/scss/customstyle/_main_style.scss
+++ b/src/assets/scss/customstyle/_main_style.scss
@@ -269,7 +269,7 @@
                     background: $neutral_1;
                     padding: 15px 18px;
                     margin: 0 0 13px;
-                    p.sh_sum_rate {
+                    .sh_sum_rate {
                         display: flex;
                         align-items: center;
                         flex-wrap: wrap;
