--- a/src/assets/scss/customstyle/_instantRate.scss
+++ b/src/assets/scss/customstyle/_instantRate.scss
@@ -1,108 +1,171 @@
 .instant_rate_wrapper.create_sales_wrapper {
-  border-radius: 6px;
-  .create_sales_search_forms {
-    .prof_wrap1 {
-      border-radius: 8px;
-      border: 1px solid #e5e7eb;
-      position: relative;
-      align-items: center;
-      padding: 8px 16px;
-      cursor: pointer;
-    }
+    border-radius: 6px;
 
-    .quotation_select_port_wrap {
-      .quotation_from_wrap {
-        padding: 6px 20px;
-      }
-      .quotation_to_wrap {
-        padding: 6px 20px 6px 40px;
-      }
-      .common_dropdwon_btn_wrap .location_img {
-        width: 24px;
-      }
-      .swap_btn_wrap {
-        position: absolute;
-        left: 0;
-        right: 0;
-        width: 30px;
-        height: 30px;
-        border-radius: 50px;
-        border: 1px solid #E5E7EB;
-        background: #fff;
-        margin: auto;
-        bottom: 0;
-        top: 0;
-    }
-      // .quotation_to_wrap{
-      //     padding: 6px 20px 6px 40px;
-      //     .common_dropdwon_btn_wrap .location_img{
-      //         width: 24px;
-      //     }
-      // }
-      .location_wrap .icon {
-        width: 38px;
-        height: 38px;
-        flex: 0 0 38px;
-        border-radius: 100%;
-        background: #f1f1fe;
-      }
-    }
-    .location_wrap {
-      .con {
-        .form-label {
-          margin: 0px;
-        }
-        .form-select__control {
-          .form-select__value-container {
-            .form-select__placeholder,
-            .form-select__single-value {
-              font-size: 14px;
+    .card-header-tabs {
+        margin: 0;
+        .nav-item .nav-link{
+            display: flex;
+            align-items: center;
+            border-radius: 5px 5px 0 0;
+            &.active {
+                background: #4848F7;
+                color: #fff;
             }
-          }
+            @media only screen and (max-width: 767px) {
+                font-size: 12px;
+                padding: 5px 10px !important;
+            }
         }
-      }
-    }
-    .prof_wrap {
-      padding: 2px 16px;
     }
 
-    .calendar_field_wrap {
-      position: relative;
-      padding: 0;
-      min-height: 38px;
-      .con {
-        .form-label {
-          top: 11px;
+    .create_sales_search_forms {
+        .prof_wrap {
+            .icon {
+                width: 28px;
+                height: 28px;
+                flex: 0 0 28px;
+                img {
+                    max-width: 20px;
+                }
+            }
         }
-        .flatpickr-input {
-          //    padding: 20px 20px 16px 60px;
-          //    padding: 32px 16px 16px 60px;
-          padding: 0px 0px 0px 20px;
-          margin: 0;
-          border: 0;
-          font-weight: 500;
-          font-size: 14px;
-          line-height: normal;
-          color: #2d1c5b;
-        }
-      }
-    }
-  }.location_img {
-    width: 25px;
-  }
-  .searchform{
-    max-height: 250px;
-    overflow: scroll;
-  }
-}
 
-@media only screen and (max-width: 767px) {
-  .instant_rate_wrapper.create_sales_wrapper
-    .create_sales_search_forms
-    .quotation_select_port_wrap
-    .quotation_to_wrap {
-    padding: 6px 20px;
-  }
+        .prof_wrap1 {
+            border-radius: 8px;
+            border: 1px solid #e5e7eb;
+            position: relative;
+            align-items: center;
+            padding: 5px 16px;
+            cursor: pointer;
+            .con, i {
+                pointer-events: none;
+            }
+        }
+
+        .quotation_select_port_wrap {
+            .quotation_from_wrap {
+                padding: 6px 20px;
+            }
+
+            .quotation_to_wrap {
+                padding: 6px 20px 6px 30px;                
+            }
+
+            .common_dropdwon_btn_wrap .location_img {
+                width: 20px;
+            }
+
+            .swap_btn_wrap {
+                position: absolute;
+                left: 0;
+                right: 0;
+                width: 30px;
+                height: 30px;
+                border-radius: 50px;
+                border: 1px solid #E5E7EB;
+                background: #fff;
+                margin: auto;
+                bottom: 0;
+                top: 0;
+            }
+            .location_wrap .icon {
+                width: 28px;
+                height: 28px;
+                flex: 0 0 28px;
+                border-radius: 100%;
+                background: #f1f1fe;
+            }
+            @media only screen and (max-width: 767px){
+                .quotation_to_wrap{
+                    padding: 6px 20px 6px 20px;
+                }
+            }
+        }
+
+        .location_wrap {
+            .con {
+                .form-label {
+                    margin: 0px;
+                }
+
+                .form-select__control {
+                    .form-select__value-container {
+
+                        .form-select__placeholder,
+                        .form-select__single-value {
+                            font-size: 14px;
+                        }
+                    }
+                }
+            }
+        }
+
+        .prof_wrap {
+            // padding: 2px 16px;
+            padding: 9px 16px;
+        }
+
+        .calendar_field_wrap {
+            position: relative;
+            padding: 0;
+            min-height: 38px;
+
+            .con {
+                .form-label {
+                    top: 10px;
+                    left: 50px;
+                }
+
+                .flatpickr-input {
+                    // padding: 0px 0px 0px 20px;
+                    padding: 31px 7px 9px 50px;
+                }
+            }
+        }
+
+        .container_combine_drop_wrap{
+            .cargo_type_tabs{
+                gap: 5px;
+                button{
+                    padding: 5px 10px;
+                    flex: 1 1 auto;
+                }
+            }
+            .inner_field_wrap {
+                .prof_wrap {
+                    padding: 0 16px;
+                    border-radius: 8px;
+                }
+            }
+        }
+        .common_dropdwon_btn_wrap {
+            .common_dropdown_wrap {
+                li {
+                    .custom-option {
+                        padding: 9px 16px;
+                        p{
+                            font-size: 14px;
+                        }
+                    }
+                }
+            }
+            &.incoterm_field_wrap {
+                .form-select__menu-list {
+                    .form-select__option {
+                        padding: 8px 10px;
+                        font-size: 13px;
+                    }
+                }
+            }
+        }
+    }
+    .location_img {
+        width: 25px;
+    }
+    // .searchform {
+    //     max-height: 250px;
+    //     overflow: scroll;
+    // }    
 }
 
 
@@ -132,8 +195,8 @@
 
 // .location_wrap {
 //   .con {
-    //     width: 100%;
-    //   }
+//     width: 100%;
+//   }
 // }
 
 // .create_sales_wrapper .create_sales_search_forms .quotation_select_port_wrap .quotation_from_wrap, .create_sales_wrapper
