--- a/src/assets/scss/customstyle/_procurement.scss
+++ b/src/assets/scss/customstyle/_procurement.scss
@@ -642,6 +642,7 @@ input[type="number"]{
                 width: 38px;
                 height: 38px;
                 margin-right: 12px;
+                flex: 0 0 38px;
                 img{
                     max-width: 100%;
                 }
