--- a/src/assets/scss/structure/_topbar.scss
+++ b/src/assets/scss/structure/_topbar.scss
@@ -365,10 +365,13 @@ body[data-layout="horizontal"] {
         width: auto;
         border: 0;
         background-color: transparent;
-        box-shadow: none;
+        box-shadow: none;   
+        padding: 12px 0px 8px 15px !important;
+             
         @media  (min-width: 992px){
             padding-left: 0;
             margin-right: 10px;
+            padding: 18px 0px 8px 0 !important;
         }
     }
     .page-content {
