--- a/src/assets/scss/customstyle/_procurement.scss
+++ b/src/assets/scss/customstyle/_procurement.scss
@@ -1384,6 +1384,16 @@ input[type="number"]{
             right: 0;
             top: -7px;
         }
+        @media only screen and (max-width: 767px) {
+            margin: 20px 0 70px;
+            .quote_btn {
+                right: 0;
+                top: auto;
+                left: 0;
+                margin: 0 auto;
+                bottom: -50px;
+            }
+        }
     }
     .result_tab_wrap {
         ul.nav {
@@ -1501,6 +1511,14 @@ input[type="number"]{
                 padding: 0;
                 box-shadow: none;
                 border: 0;
+                @media only screen and (max-width: 767px) {
+                    min-width: 80px;                    
+                }
+            }
+            @media only screen and (max-width: 1250px) {
+                .quote_now_btn{
+                    min-width: 100px;
+                }
             }
         }
         // &::before{
@@ -1575,6 +1593,9 @@ input[type="number"]{
 // ---------------- quotation modal---------------------
 .quotation_modal_wrap {
     max-width: 1345px;
+    @media only screen and (max-width: 1350px) {
+        max-width: 98%;
+    }
     .modal-body{
         min-height: 600px;
     }
