feat: update fcl and instant rate

--- a/src/assets/scss/customstyle/_common_style.scss
+++ b/src/assets/scss/customstyle/_common_style.scss
@@ -463,3 +463,8 @@ nav.breadcrumb_wrap {
     font-size: 12px;
     font-family: "IBM Plex Sans", sans-serif !important;
 }
+.required_star {
+    color: red;
+    margin-left: 3px;
+    font-size: 14px;
+}
