--- a/src/assets/scss/customstyle/_procurement.scss
+++ b/src/assets/scss/customstyle/_procurement.scss
@@ -1612,7 +1612,8 @@ input[type="number"]{
 
     // Air freight card
     .air_freight_result_card{
-        padding: 30px 46px 0px;
+        padding: 20px 25px 20px;
+        width: calc(100% - 29px);
         .search_card_top{
             padding-bottom: 10px;
             margin-bottom: 10px;
@@ -1646,7 +1647,10 @@ input[type="number"]{
             }
         }
         .search_card_middle{
-            margin: 0 0 12px;
+            margin: 12px 0;
+            padding: 12px 0;
+            border-top: 1px solid #E5E7EB;
+            border-bottom: 1px solid #E5E7EB;
             p{
                 @include font($font-weight-normal,14px,normal,$neutral_8);
                 margin: 0;
@@ -1662,12 +1666,51 @@ input[type="number"]{
             }
         }
         .middle_content{
-            width: 100%;
+            // width: 100%;
             padding: 0;
             .from_to_wrap {
                 .from_loc{
                     text-align: center;
                 }
+            }
+        }
+        .card_img{
+            .img{
+                overflow: hidden;
+                img{
+                    padding: 0;
+                }
+            }
+            .flight_name{
+                @include font($font-weight-medium,14px,normal,$neutral_8);
+            }
+        }
+        .card_corder-label {
+            width: 150px;
+            height: 150px;
+            overflow: hidden;
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            span {
+                position: absolute;
+                display: block;
+                width: 165px;
+                padding: 8px 0;
+                background-color: $primary_8;
+                box-shadow: 0 5px 10px rgba(0,0,0,.1);
+                color: $white;
+                text-shadow: 0 1px 1px rgba(0,0,0,.2);
+                text-transform: uppercase;
+                text-align: center;
+                // left: 35px;
+                // top: 18px;
+                // transform: rotate(45deg);
+                left: -52px;
+                top: 15px;
+                transform: rotate(-45deg);
+                font-size: 10px;
+                background: $danger_8;                
             }
         }
     }
