feat: update air search result, settings

--- a/src/assets/scss/customstyle/_instantRate.scss
+++ b/src/assets/scss/customstyle/_instantRate.scss
@@ -197,7 +197,14 @@
     }
     .location_img {
         width: 25px;
-    }  
+    } 
+    
+    .air_cargo_date, .ocean_cargo_date{
+        display: none !important;
+        &.active{
+            display: block !important;
+        }
+    }
 }
 
 // -------------------------
