feat: update customer rate

--- a/src/assets/scss/customstyle/_instantRate.scss
+++ b/src/assets/scss/customstyle/_instantRate.scss
@@ -207,4 +207,10 @@
     }
 }
 
+.customer_rate_wrapper{
+    h5{
+        @include font($font-weight-semibold,16px,normal,$neutral_8);
+    }
+}
+
 // -------------------------
