--- a/src/assets/scss/customstyle/_procurement.scss
+++ b/src/assets/scss/customstyle/_procurement.scss
@@ -1824,7 +1824,7 @@ input[type="number"]{
                 padding: 0;
                 .dropdown-item{
                     padding: 0;
-                    button{
+                    .btn{
                         border-radius: 0; 
                         border: 0;
                         border-bottom: 1px solid $neutral_2;                       
@@ -1937,7 +1937,7 @@ input[type="number"]{
                         background: #F9FAFB;
                         img{
                             max-width: 100%;
-                            @include borderRadius(10px);
+                            @include borderRadius(100%);
                             padding: 5px;
                         }
                     }
