--- a/src/assets/scss/customstyle/_common_style.scss
+++ b/src/assets/scss/customstyle/_common_style.scss
@@ -39,6 +39,10 @@ ul { padding: 0; margin: 0; list-style: none; }
     display: flex;
     flex-direction: column
 }
+.btn-primary:hover{
+    background-color: $primary_9;
+    border-color: $primary_9;
+}
 
 .table_wrap{
     // overflow-x: auto;
@@ -484,6 +488,11 @@ nav.breadcrumb_wrap {
             margin: 20px 0;
         }
     }
+}
+
+.focus_custom_div:focus {
+    box-shadow: 0px 0px 0px 4px #F1F1FE;
+    border-radius: 12px;
 }
 
 //  loader
