--- a/src/assets/scss/customstyle/_procurement.scss
+++ b/src/assets/scss/customstyle/_procurement.scss
@@ -1500,13 +1500,18 @@ input[type="number"]{
         border: 1px solid $neutral_2;
         @include borderRadius(12px); 
         overflow-x: auto;  
+        &.card_active,&:hover{
+            border: 1px solid $primary_7;
+            background: $primary_1;
+        }
         .search_result_card_header,.search_result_accordion_details{
             min-width: 750px;
         }     
         .card_img {
-            min-width: 120px;
+            min-width: 130px;
+            max-width: 130px;
             padding-right: 20px;
-            margin-right: 40px;
+            margin-right: 30px;
             border-right: 1px solid $neutral_2;
             .img{
                 width: 48px;
@@ -1526,7 +1531,7 @@ input[type="number"]{
         }
         .middle_content {
             width: calc(100% - 390px);
-            padding-right: 40px;
+            padding-right: 20px;
             .from_to_wrap  {
                 position: relative;
                 &::before{
@@ -1579,7 +1584,7 @@ input[type="number"]{
         .total_wrap {
             max-width: 230px;
             margin-left: auto;
-            padding-left: 35px;
+            padding-left: 25px;
             border-left: 1px dashed $neutral_2;
             .view_detail_btn{
                 min-width: 95px;
@@ -1590,10 +1595,8 @@ input[type="number"]{
                     min-width: 80px;                    
                 }
             }
-            @media only screen and (max-width: 1250px) {
-                .quote_now_btn{
-                    min-width: 100px;
-                }
+            .quote_now_btn{
+                min-width: 100px;
             }
         }
         // &::before{
