--- a/src/assets/scss/customstyle/_procurement.scss
+++ b/src/assets/scss/customstyle/_procurement.scss
@@ -681,6 +681,9 @@ input[type="number"]{
             align-items: center;
             padding: 16px;
             cursor: pointer;
+            &.error{
+                border-color: red;
+            }
             .icon {
                 @include borderRadius(999px);
                 background: $primary_1;
@@ -839,6 +842,9 @@ input[type="number"]{
                 &.openmenu{
                     box-shadow: 0px 0px 0px 4px $primary_1;
                     border: 1px solid $primary_7;
+                }
+                &.error{
+                    border-color: red;
                 }
             }
             .quotation_from_wrap{
@@ -2148,6 +2154,12 @@ input[type="number"]{
     }
     .preview_table_wrap {
         margin: 8px 0;
+        .preview_carrier_data{
+            margin: 15px 0 5px;
+            p{
+                b{@include font($font-weight-bold,16px,normal,$neutral_8)};
+            }
+        }
         table {
             width: 100%;
             @include borderRadius(0 0 8px 8px);
