--- a/src/assets/scss/customstyle/_common_style.scss
+++ b/src/assets/scss/customstyle/_common_style.scss
@@ -43,6 +43,11 @@ ul { padding: 0; margin: 0; list-style: none; }
     background-color: $primary_9;
     border-color: $primary_9;
 }
+.error_msg{
+    color: red;
+    text-transform: capitalize;
+    font-size: 12px;
+}
 
 .table_wrap{
     // overflow-x: auto;
