--- a/src/assets/scss/customstyle/_common_style.scss
+++ b/src/assets/scss/customstyle/_common_style.scss
@@ -48,7 +48,83 @@ ul { padding: 0; margin: 0; list-style: none; }
     text-transform: capitalize;
     font-size: 12px;
 }
-
+.table_wrap_role{
+    table{
+        width: 100%;
+        th{
+            background: $primary_1;
+            @include font($font-weight-medium,14px,normal,$neutral_8);
+            padding: 16px 12px;
+            vertical-align: middle;
+            box-shadow: none;
+            border: 0;
+            cursor: pointer;
+            &:first-child{
+                border-radius: 12px 0px 0px 0px;
+            }
+            &:last-child{
+                border-radius: 0px 12px 0px 0px;
+            }
+            span{
+                i{
+                    color: $neutral_5;
+                    font-size: 11px;
+                    margin-left: 7px;
+                }
+            }
+        }
+        td{
+            @include font($font-weight-normal,14px,normal,$neutral_8);
+            padding: 5px 12px;
+            border-bottom: 1px solid $grey_shade1;
+            min-height: 44px;
+            height: 44px;
+            vertical-align: middle;            
+            .prof_wrap {
+                @extend .flex-center;
+                .img {
+                    width: 26px;
+                    height: 26px;
+                    margin-right: 10px;
+                }
+            }
+        }
+        .dropdown-menu {
+            border-radius: 12px;
+            background: $white;
+            box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.20);
+            padding: 0;
+            min-width: 190px;
+            .dropdown-item{
+                @extend .flex-center;
+                justify-content: space-between;
+                @include font(500,16px,normal,$neutral_8);
+                padding: 13px 16px;
+                &:not(:last-child){
+                    border-bottom: 1px solid $neutral_2;
+                }
+            }
+        }
+        .switch_wrap{
+            .form-check {
+                padding: 0;
+                width: 36px;
+                height: 20px;
+                .form-check-input {
+                    margin: 0;
+                    width: 36px;
+                    height: 20px;
+                    background-color: $danger_7;
+                    border: 0;
+                    background-image: url("../../images/icons/white_switch_dot.svg");
+                    &:checked{
+                        background-color: $primary_7;
+                    }
+                }
+            }
+        }
+    }
+}
 .table_wrap{
     // overflow-x: auto;
     table{
