--- a/src/assets/scss/customstyle/_procurement.scss
+++ b/src/assets/scss/customstyle/_procurement.scss
@@ -2257,7 +2257,14 @@ input[type="number"]{
 .air_compare_form{
     gap: 10px 0;
     .form-select__control {
-        height: 38px;
+        height: 32px;
+        min-height: 32px;
+        .select2-selection.form-select__indicator{
+            padding: 4px 8px;
+        }
+    }
+    .form-control{
+        padding: 6px 12px;
     }
 }
 
@@ -2284,6 +2291,9 @@ input[type="number"]{
                     }
                 }
             }
+        }
+        tbody {
+            height: 350px;
         }
     }
 }
